[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/npcs.png" type="Texture" id=1]
[ext_resource path="res://assets/talk_notif.png" type="Texture" id=2]
[ext_resource path="res://classes/Npc.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 4 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 16, 16 )

[node name="Npc" type="StaticBody2D"]
collision_mask = 0
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 16, 16 )

[node name="SpeechNotif" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 1 )

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="InteractionShape" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource( 2 )

[connection signal="area_entered" from="InteractionArea" to="." method="_on_InteractionArea_area_entered"]
[connection signal="area_exited" from="InteractionArea" to="." method="_on_InteractionArea_area_exited"]
